fix off centre alt avatar bug

--- a/src/components/shared/activity/simple.module.scss
+++ b/src/components/shared/activity/simple.module.scss
@@ -14,7 +14,7 @@
     align-items: center;
   }
 
-  span {
+  .info {
     margin: 0px 2px;
     display: inline-block;
     color: #4f5162;
